Fix Horizontal scrolling on module list

--- a/src/main/resources/static/css/master.css
+++ b/src/main/resources/static/css/master.css
@@ -3,10 +3,11 @@
 }
 
 .scroller-card {
-    width: 1280px;
-    height: 300px;
-    overflow: scroll;
-    padding: 5px;
+     width: 1280px;
+     height: 300px;
+     overflow: hidden;
+     overflow-y: scroll;
+     padding: 5px;
 }
 
 #footer {
